--- a/package.json
+++ b/package.json
@@ -1,4 +1,14 @@
 {
+  "name": "website-express",
+  "version": "1.0.0",
+  "description": "Basic website using Express",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/webprogramming260/website-express.git"
+  },
+  "license": "MIT",
+  "homepage": "https://github.com/webprogramming260/website-express#readme",
   "dependencies": {
     "express": "^4.18.2"
   }
